option('enable-indicator', type : 'boolean', value : false, description : 'Enable app indicator plugin')
option('enable-gtk-doc', type: 'boolean', value: false, description: 'Enable generating the API reference (depends on GTK-Doc)')
option('enable-kwallet', type: 'boolean', value: false, description: 'Enable kwallet4 support')
option('do-post-install', type: 'boolean', value: true, description: 'Run post-install script')
